open-policy-agent/open-policy-agent/policy/psp-privileged-containers/samples/psp-privileged-container/example_allowed_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
          securityContext:
            privileged: false
