open-policy-agent/open-policy-agent/policy/psp-privileged-containers/samples/psp-privileged-container/example_disallowed_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        supplementalGroups:
         - 1999
        fsGroup: 1999     
      containers:
      - name: nginx
        image: escoacrprod01.azurecr.io/esco/appdynamics/cluster-agent-operator:0.6.11
        securityContext:
          privileged: true
